--- a/style.css
+++ b/style.css
@@ -6,39 +6,72 @@
 
 body {
   display: flex;
+  font-family: 'Poppins', sans-serif;
 }
 
 nav {
   display: flex;
   flex-direction: column;
-  /* background-color: black; */
+  background-color: rgb(223, 213, 213);
   height: 100vh;
-  width: 20vh;
-}
-
-li {
-  margin: 20px 0px;
-  padding-left: 10%;
-  list-style: none;
+  width: 300px;
 }
 
 h1.logo {
   padding-left: 10%;
   padding-top: 10%;
+  padding-bottom: 10%;
+  font-family: 'playball', cursive;
+  font-size: 2.5rem;
+}
+
+nav li {
+  margin: 20px 0px;
+  padding-left: 10%;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+nav i {
+  height: 20px;
+  width: 40px;
+}
+
+nav a {
+  text-decoration: none;
+  letter-spacing: 3px;
+  color: white;
 }
 
 .body {
-  padding-left: 5%;
-  padding-top: 5%;
+  padding-left: 3rem;
+  padding-top: 5rem;
   height: 100vh;
-  width: 80vh;
+  width: 85vw;
   background-color: wheat;
 }
 
 .daily {
-  margin-top: 5%;
+  margin-top: 3rem;
   background: lightblue;
-  width: 60%;
+  width: 40%;
+  border-radius: 10px;
+  background: rgb(224, 189, 224);
+}
+
+.daily img {
+  border-radius: 10px;
+  height: 100px;
+  width: 80px;
+  opacity: 90%;
+}
+
+.dailyCalm {
+  display: flex;
+  justify-content: center;
+  padding-left: 20px;
+  flex-direction: column;
 }
 
 .banner {
@@ -47,7 +80,7 @@ h1.logo {
 }
 
 .banner select {
-  margin-left: 5%;
+  margin-left: 3rem;
   height: 2rem;
   width: 10rem;
   border-radius: 1rem;
@@ -59,13 +92,45 @@ h1.logo {
 }
 
 .meditations {
+  /* 
+  margin-right: 300px;
   display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  
+  height: 60vh; */
+  width: 100%;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
 }
 
 .meditation {
-  height: 150px;
-  width: 100px;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+}
+
+.meditation .nature {
+  height: 200px;
+  width: 150px;
+  margin-bottom: 30px;
+  z-index: 1;
+}
+
+.meditation .letter {
+  position: absolute;
+  margin-top: 150px;
+  width: 150px;
+  font-size: 1rem;
+  background: black;
+  opacity: 50%;
+  z-index: 2;
+}
+
+.meditation h3 {
+  position: ;
+}
+
+.meditation h3 .panic {
+  margin-top: 10px;
 }
