--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  background: linear-gradient(rgb(0, 85, 136), rgb(102, 170, 187));
+}
+
 body {
   display: flex;
   font-family: 'Poppins', sans-serif;
@@ -12,9 +16,10 @@ body {
 nav {
   display: flex;
   flex-direction: column;
-  background-color: rgb(223, 213, 213);
+  background: rgb(0, 34, 67, 90%);
   height: 100vh;
   width: 300px;
+  box-shadow: inset 0 0 0.9px rgb(86, 136, 153);
 }
 
 h1.logo {
@@ -23,6 +28,7 @@ h1.logo {
   padding-bottom: 10%;
   font-family: 'playball', cursive;
   font-size: 2.5rem;
+  color: rgb(255, 255, 255);
 }
 
 nav li {
@@ -36,12 +42,19 @@ nav li {
 nav i {
   height: 20px;
   width: 40px;
+  color: rgb(255, 255, 255);
 }
 
 nav a {
   text-decoration: none;
   letter-spacing: 3px;
-  color: white;
+  color: rgb(255, 255, 255);
+}
+
+nav .active {
+  background: rgb(186, 226, 236, 30%);
+  padding: 15px 0px;
+  padding-left: 20px;
 }
 
 .body {
@@ -49,15 +62,18 @@ nav a {
   padding-top: 5rem;
   height: 100vh;
   width: 85vw;
-  background-color: wheat;
+  box-shadow: inset 0 0 30px rgb(86, 136, 153);
+}
+
+.body h1 {
+  color: rgb(255, 255, 255);
 }
 
 .daily {
-  margin-top: 3rem;
-  background: lightblue;
+  margin-top: 2rem;
   width: 40%;
   border-radius: 10px;
-  background: rgb(224, 189, 224);
+  background: rgb(204, 221, 238);
 }
 
 .daily img {
@@ -79,12 +95,16 @@ nav a {
   align-items: center;
 }
 
+.banner h1 {
+  color: rgb(238, 223, 223);
+}
+
 .banner select {
   margin-left: 3rem;
   height: 2rem;
   width: 10rem;
   border-radius: 1rem;
-  background: rgb(109, 138, 148);
+  background: rgb(19, 85, 119);
 }
 
 .daily {
@@ -125,8 +145,12 @@ nav a {
 }
 
 .meditation h3 {
-  color: white;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
   z-index: 3;
   font-size: 0.9rem;
   padding: 3px;
+}
+
+@media only screen and (max-width: 1200px) {
 }
