--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ h1.logo {
   color: rgb(255, 255, 255);
 }
 
+nav .logo-back i {
+  display: none;
+}
+
 nav li {
   margin: 20px 0px;
   padding-left: 10%;
@@ -152,5 +156,75 @@ nav .active {
   padding: 3px;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1550px) {
+  nav {
+    position: fixed;
+  }
+
+  html {
+    height: 170vh;
+  }
+
+  .body {
+    margin-left: 18.5rem;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  html {
+    background: none;
+    height: 100%;
+    /* overflow-x: hidden; */
+  }
+
+  nav {
+    width: 100vh;
+    z-index: -1;
+    position: absolute;
+    transition: all 0.5s ease;
+  }
+
+  nav .logo-back {
+    background: rgba(85, 83, 83, 0.3);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav .logo {
+    padding: 15px 10px;
+    width: 100vw;
+  }
+
+  nav .logo-back i {
+    display: inline-block;
+    margin-right: 3rem;
+  }
+
+  ul {
+    margin-left: -50px;
+    transform: translateX(100vh);
+    background: linear-gradient(rgb(0, 85, 136), rgb(102, 170, 187));
+  }
+
+  nav .active {
+    padding-left: 90px;
+  }
+
+  .body {
+    margin-top: 5rem;
+    width: 100vw;
+    height: 100%;
+    margin-left: 0;
+    background: linear-gradient(rgb(0, 85, 136), rgb(102, 170, 187));
+  }
+
+  .meditations {
+    width: 100vw;
+    height: 100%;
+  }
+
+  .daily {
+    width: 350px;
+  }
 }
