--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ nav .active {
   html {
     background: none;
     height: 100%;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
   }
 
   body {
@@ -198,7 +198,6 @@ nav .active {
   nav {
     width: 100%;
     position: absolute;
-    transition: all 0.5s ease;
   }
 
   nav .logo-back {
@@ -227,7 +226,11 @@ nav .active {
     margin-right: 3rem;
   }
 
-  .nav-links {
+  .nav-active {
+    transform: translateX(0%);
+  }
+
+  #nav-links {
     transform: translateX(100%);
     background: linear-gradient(rgb(0, 85, 136), rgb(102, 170, 187));
   }
