fixed height problem

--- a/style.css
+++ b/style.css
@@ -230,17 +230,9 @@ nav .active {
     margin-right: 3rem;
   }
 
-  .nav-active {
-    transform: translateX(0%);
-  }
-
   #nav-links {
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
     background: linear-gradient(rgb(0, 85, 136), rgb(102, 170, 187));
-  }
-
-  nav .active {
-    padding-left: 90px;
   }
 
   .body {
